# smokylab

./: .gitignore  CMakeLists.txt  CMakeSettings.json  build.ps1  build.py  fbuild.bff  readme.md
assets/models/BoxTextured/: BoxTextured.gltf
assets/models/Planes/: Planes.gltf
cmake/: CPM.cmake
dep/: Metal.hpp  cgltf.h  stb_image.h
dep/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_dx11.cpp  imgui_impl_sdl.cpp  imgui_tables.cpp  imgui_widgets.cpp
scripts/: build.py  post_build.py
shaders/: brdf.hlsl  common.hlsli  debug.hlsl  exposure.hlsl  forward_pbr.hlsl  fst.hlsl  new_brdf.hlsl  oit_accum.hlsl  oit_composite.hlsl  particle.hlsl  sky.hlsl  ssao.hlsl  wireframe.hlsl
shaders/metal/: debug.metal
src/: CMakeLists.txt  app.c  app.h  asset.c  asset.cpp  asset.h  camera.c  camera.cpp  camera.h  editor.c  editor.cpp  editor.h  editor_gui.cpp  editor_gui.h  gui.cpp  gui.h  main.cpp  metal_bindings.mm  render.cpp  render.h  resource.c  resource.h  smk.cpp  smk.h  smk_render_metal.cpp  smk_render_metal.mm  smk_render_metal_aux.mm  smk_render_null.cpp  smokylab.cpp  smokylab.h  str.c  str.h  util.h  vmath.c  vmath.h
